change mysql port

--- a/change_mysql_port_in_xampp.html
+++ b/change_mysql_port_in_xampp.html
@@ -12,6 +12,7 @@
         .container {
             font-size: 20px;
             font-weight: 500;
+            width: 100%;
         }
     </style>
 </head>
@@ -24,7 +25,7 @@
             i)Go to “C:\xampp\mysql\bin” folder and edit the file “my.ini”<br>
             ii)Change the port of mysql from 3306 to your choice (here I am changing to 3307)
         </div><br>
-        <div class="bg-black w-75 text-white p-3">
+        <div class="bg-black text-white p-3">
             # The following options will be passed to all MySQL clients<br>
             [client]<br>
             # password = your_password <br>
@@ -45,9 +46,9 @@
             iv)Add port of mysql to the host ip address (here changed port is 3307)<br><br>
         </div>
         <div>
-            <img src="images/mysql1.png" alt=""><br>
+            <img class="img-fluid" src="images/mysql1.png" alt=""><br>
             <div>Replace the above server host by code given below (enter your mysql port)</div>
-            <img src="images/mysql2.png" alt=""><br><br>
+            <img class="img-fluid" src="images/mysql2.png" alt=""><br><br>
             <div class="pb-4">
                 Congratulations! Now you are able to access your phpmyadmin dashboard.
             </div>
