--- a/change_mysql_port_in_xampp.html
+++ b/change_mysql_port_in_xampp.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <div class="container container-fluid pt-2">
+    <navbar></navbar>
+    <div class="container container-fluid pt-2" style="height: 100vh;">
         <h1 class="text-center"><u><i>How to change the MySQL port in xampp</i></u></h1>
         <div>For changing the MySQL port in xampp follow these steps :-</div><br>
         <div>
@@ -54,9 +55,11 @@
             </div>
         </div>
     </div>
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
