--- a/faq.html
+++ b/faq.html
@@ -12,15 +12,15 @@
 </head>
 
 <body>
-    
     <navbar></navbar>
     <h1>Welcome to the edu site of Gaurav Sharma</h1>
+    
     <div  style="height: 100vh;"></div>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
