--- a/change_mysql_port_in_xampp.html
+++ b/change_mysql_port_in_xampp.html
@@ -19,7 +19,7 @@
 
 <body>
     <navbar></navbar>
-    <div class="container container-fluid pt-2" style="height: 100vh;">
+    <div class="container container-fluid pt-2">
         <h1 class="text-center"><u><i>How to change the MySQL port in xampp</i></u></h1>
         <div>For changing the MySQL port in xampp follow these steps :-</div><br>
         <div>
